--- a/.github/workflows/logbook.yml
+++ b/.github/workflows/logbook.yml
@@ -44,6 +44,7 @@ jobs:
                 git config --global user.name "github-actions[bot]"
                 git config --global user.email "github-actions[bot]@users.noreply.github.com"
                 git add renders/
+                git add markdown/
                 git commit -m "chore: render logbook" || echo "No changes to commit"
                 git push origin main || echo "No changes to push"
             env:
