--- a/config/references.yaml
+++ b/config/references.yaml
@@ -1,14 +1,14 @@
 ---
 references:
-    -   author: Author, A. A.
-        description: Brief description of the book.
-        publisher: Publisher
-        title: Title of the Book
-        type: book
-        year: "2023"
-    -   author: Website Name
-        description: Brief description of the content.
-        title: Title of the Webpage
+    -   author: Google
+        description: A comprehensive guide to C++ coding standards and best practices.
+        title: C++ Style Guide
         type: website
-        url: https://example.com
-        year: "2023"
+        url: https://google.github.io/styleguide/cppguide.html
+        year: "2024"
+    -   author: Doxygen
+        description: Official documentation for Doxygen's documentation blocks and usage.
+        title: Doxygen Manual - Documentation Blocks
+        type: website
+        url: https://www.doxygen.nl/manual/docblocks.html
+        year: "2024"
