fix: html rendering and pushing

--- a/.github/workflows/logbook.yml
+++ b/.github/workflows/logbook.yml
@@ -32,10 +32,6 @@ jobs:
                 sudo apt-get install -y pandoc
                 pandoc renders/logbook.md -o renders/logbook.docx --reference-doc=config/style-reference.docx --lua-filter=scripts/pagebreak.lua
 
-        -   name: Convert Markdown to HTML
-            run: |
-                pandoc renders/logbook.md -o renders/logbook.html
-
         -   name: Upload Logbook Artifacts
             uses: actions/upload-artifact@v4
             with:
@@ -47,10 +43,9 @@ jobs:
             run: |
                 git config --global user.name "github-actions[bot]"
                 git config --global user.email "github-actions[bot]@users.noreply.github.com"
-                git checkout -B logbook
                 git add renders/
                 git add markdown/
                 git commit -m "chore: render logbook" || echo "No changes to commit"
-                git push origin logbook --force || echo "No changes to push"
+                git push origin main || echo "No changes to push"
             env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
