--- a/.github/workflows/logbook.yml
+++ b/.github/workflows/logbook.yml
@@ -5,6 +5,9 @@ on:
         branches:
             - main
 
+permissions:
+    contents: write
+
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -49,3 +52,26 @@ jobs:
                 git push origin main || echo "No changes to push"
             env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    build-and-deploy:
+        needs: [build]
+        concurrency: ci-${{ github.ref }}
+        runs-on: ubuntu-latest
+        steps:
+            -   name: Checkout the repository
+                uses: actions/checkout@v4
+
+            -   name: Set up Python
+                uses: actions/setup-python@v5
+                with:
+                    python-version: '3.12'
+
+            -   name: Build the site
+                run: |
+                    sudo apt-get install -y pandoc
+                    pandoc renders/logbook.md -o renders/html/logbook.html
+
+            -   name: Deploy the site
+                uses: JamesIves/github-pages-deploy-action@v4
+                with:
+                    branch: logbook
+                    folder: renders/html
