--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -27,8 +27,8 @@ jobs:
             run: |
                 pip install -r requirements.txt
 
-        -   name: Run logbook generation script
-            run: python scripts/logbook.py
+        -   name: Generate Logbook
+            run: logbookgenerator -i weeks/ -o renders/logbook.md -c config/config.yml 
 
         -   name: Convert Markdown to DOCX
             run: |
@@ -51,7 +51,6 @@ jobs:
                 git config --global user.name "github-actions[bot]"
                 git config --global user.email "github-actions[bot]@users.noreply.github.com"
                 git add renders/
-                git add markdown/
                 git commit -m "chore: render logbook" || echo "No changes to commit"
                 git push origin main || echo "No changes to push"
             env:
