--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -25,15 +25,15 @@ jobs:
 
         -   name: Install dependencies
             run: |
-                pip install -r requirements.txt
+                pip install logbookgenerator
 
         -   name: Generate Logbook
-            run: logbookgenerator -i weeks/ -o renders/logbook.md -c config/config.yaml 
+            run: logbookgenerator
 
         -   name: Convert Markdown to DOCX
             run: |
                 sudo apt-get install -y pandoc
-                pandoc renders/logbook.md -o renders/logbook.docx --reference-doc=config/style-reference.docx --lua-filter=scripts/pagebreak.lua
+                pandoc renders/logbook.md -o renders/logbook.docx --reference-doc=pandoc/style-reference.docx --lua-filter=pandoc/pagebreak.lua
 
         -   name: Convert Markdown to HTML
             run: |
